# SAMperium

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/samperium/: __init__.py  database.py  monitor.py  presence.py  requirements.txt  samperium.py  tree.py
tests/: test_samperium.py
